# notificable-purr

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  SETUP.md  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: main.rs  notification.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: Button.tsx  Input.tsx  Link.tsx  Text.tsx
frontend/src/hooks/: useGreeting.ts  useHealthStatus.ts
frontend/src/layout/: Card.tsx  Header.tsx  List.tsx  NotificationOverlay.tsx  Page.tsx
frontend/src/notifications/: history.ts  index.ts  notifications.ts  permission.ts
