[package]
name = "notificable-purr-backend"
version.workspace = true
edition.workspace = true

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
actix-cors = "0.7"
